<resources>
    <string name="app_name">环球加速器</string>
    <string name="account_setting">个人中心</string>
    <string name="account_id">用户名</string>
    <string name="account_vip_password">密码</string>
    <string name="account_modify_pwd">修改密码</string>
    <string name="account_bind_mobile">绑定手机</string>
    <string name="account_praise">切换账号</string>
    <string name="app_problem_feedback">问题反馈</string>
    <string name="account_exchange">分享</string>
    <string name="mobilenum_cannot_empty">请输入手机号</string>
    <string name="refereecode_cannot_empty">请输入要绑定的分享码</string>
    <string name="mobilenum_format_error">请输入11位手机号</string>
    <string name="verifycode_cannot_empty">请输入验证码</string>
    <string name="verifycode_format_error">请输入6位验证码</string>
    <string name="pwd_cannot_empty">请输入密码</string>
    <string name="confirmpwd_cannot_empty">请输入确认密码</string>
    <string name="pwd_format_error">请输入6-18位密码</string>
    <string name="pwd_length_min_six">请输入验证码(最少6位)</string>
    <string name="pwd_confirm_error">两次输入的密码不一样</string>
    <string name="mobile_bind_success">手机号绑定成功!</string>
    <string name="feedback_cannot_empty">请输入您的建议</string>
    <string name="feedback_cannot_minlength">建议内容至少15个汉字</string>
    <string name="contact_mobile_email">手机号格式不正确</string>
    <string name="loading_text">数据加载中...</string>
    <string name="loading_text_req">提交中...</string>
    <string name="app_problem_help">帮助</string>
    <string name="app_used_pc">PC端使用</string>
    <string name="select_website">选择导航</string>
    <string name="Binding_failure">绑定失败：</string>
    <string name="get_VerifyCode">获取验证码</string>
    <string name="request_again">重新发送(</string>
    <string name="loading_success">登录成功</string>
    <string name="loading_failure">账号或者密码错误，请重新输入</string>
    <string name="send_success">发送成功</string>
    <string name="send_failure">发送失败</string>
    <string name="net_state">无网络连接，请检查你的网络</string>
    <string name="setting_consume">消费记录</string>
    <string name="connect_failure">连接失败，请重试</string>
    <string name="buy">购买套餐</string>
    <string name="toast_bind_phone">请先绑定手机号！</string>
    <string name="et_yzm">请输入验证码</string>
    <string name="submit">提交</string>
    <string name="content">感谢您关注本产品,我们非常乐意接收您的建议!</string>
    <string name="user_share_tips">邀请好友使用蓝猫VPN，若推广码被用户绑定，您会获得丰厚的奖励</string>
    <string name="bind_share_tips">Tips：一个用户只能绑定一个推荐人</string>
    <string name="user_share_title">您的推广码</string>
    <string name="bind_share_title">绑定推荐人</string>
    <string name="shareto_title">分享到</string>
    <string name="copy">复制</string>
    <string name="no_data_tips">暂无订单数据</string>
    <string name="bind_share">绑定</string>
    <string name="referee_bind_share">推荐码绑定失败</string>
    <string name="referee_bind_hits">请输入对方推广码</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="share">分享</string>
    <string name="wechat">微信</string>
    <string name="friend">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="input_verifycode">验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="feedback">问题反馈</string>
    <string name="feedback_hint">填写您的联系电话,方便我们及时给您反馈.</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="vertical">验证码</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_again">请再次输入密码</string>
    <string name="hint_password">密码长度为6～18位</string>
    <string name="help">帮助</string>
    <string name="problem">常见问题</string>
    <string name="back">返回</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="modify_password">修改密码</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="_6">设置密码(最少6位)</string>
    <string name="password_again">重复密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="pay_order">订单支付</string>
    <string name="order_message">订单信息</string>
    <string name="a1">选择支付方式</string>
    <string name="a2">微信支付</string>
    <string name="a3">支付宝</string>
    <string name="a4">确认支付</string>
    <string name="a5">注册</string>
    <string name="a6">手机号</string>
    <string name="a7">请输入手机号</string>
    <string name="a8">验证码</string>
    <string name="a9">请输入验证码</string>
    <string name="a10">获取验证码</string>
    <string name="a11">密码</string>
    <string name="a12">设置密码(最少6位)</string>
    <string name="a13">确认密码</string>
    <string name="a14">请再次输入密码</string>
    <string name="a15">密码长度为6～18位</string>
    <string name="a16">立即注册</string>
    <string name="a17">点击复制下载地址</string>
    <string name="a18">购买钻石</string>
    <string name="a19">我的订单</string>
    <string name="a20">温馨提示：为避免不必要的损失，请已购买套餐的用户，务必 记录自已的用户名和密码或绑定手机号！</string>
    <string name="a21">导航</string>
    <string name="a22">为什么连接不上</string>
    <string name="a23">已取消</string>
    <string name="a24">已取消</string>
    <string name="a25">已取消</string>
    <string name="a26">为什么连接不上</string>
    <string name="a27">钻石充值</string>
    <string name="a28">月卡会员</string>
    <string name="a29">为什么连接不上</string>
    <string name="a30">为什么连接不上</string>
    <string name="a31">1钻石/天</string>
    <string name="a32">精英服务</string>
    <string name="a33">立即使用</string>
    <string name="a34">到期时间：2019-05-21 10:15</string>
    <string name="a35">铂金特权</string>
    <string name="a36">能访问Facebook、twitter、instaram等网站；使用telegram 等通许工具。</string>
    <string name="a37">版本更新</string>
    <string name="a38">版本更新</string>
    <string name="a39">版本更新</string>
    <string name="a40">取消</string>
    <string name="a41">下载更新</string>
    <string name="a42">购买</string>
    <string name="a43">导航</string>
    <string name="a44">本次充值需支付金额</string>
    <string name="a45">微信支付</string>
    <string name="a46">支付宝</string>
    <string name="a47">确认</string>
    <string name="a48">好评、分享可领取时间奖励哦！</string>
    <string name="a49">给我们好评</string>
    <string name="a50">分享链接</string>
    <string name="a51">正在加载...</string>
    <string name="a52">已经全部加载完毕</string>
    <string name="a53">加载中...</string>
    <string name="clock_in">签到</string>
    <string name="vip_service">会员服务</string>
    <string name="a54">我的订单</string>
    <string name="Deadline">到期时间:</string>
    <string name="current_service_king">当前服务：王者特权</string>
    <string name="current_service_elite">当前服务：精英特权</string>
    <string name="toast">用户信息异常，请检查网络,重启应用！</string>
    <string name="net_error">网络异常，请检查网络。</string>
    <string name="service">服务器</string>
    <string name="remote_port">远程端口</string>
    <string name="remote_port_tip">%s (远程服务器的端口号)</string>
    <string name="local_port">本地端口</string>
    <string name="local_port_tip">1080 (本地客户端的端口号)</string>
    <string name="encrypt_method">加密方法</string>
    <string name="protocol">协议</string>
    <string name="Protocol_param">协议参数</string>
    <string name="default1">默认</string>
    <string name="obsf">混淆</string>
    <string name="obfs_param">混淆参数</string>
    <string name="check_sd">请检查SD卡</string>
    <string name="service1">服务</string>
    <string name="deadline1">到期时间：</string>
    <string name="privilege">特权</string>
    <string name="Used_now">立即使用</string>
    <string name="In_use">使用中</string>
    <string name="a20001">用户不存在或者密码错误</string>
    <string name="a20002">用户被禁用</string>
    <string name="a20003">密码错误</string>
    <string name="a20004">没有获取到用户的会员卡</string>
    <string name="a20005">没有找到用户使用的会员卡类型</string>
    <string name="a20006">生成Token失败</string>
    <string name="a20007">获取不到用户设备唯一标识符</string>
    <string name="a20008">创建用户失败</string>
    <string name="a20009">获取创建用户时候的密码失败</string>
    <string name="a20010">获取用户VIP卡类型失败</string>
    <string name="a20011">用户过期时间没有设置</string>
    <string name="a20012">未获取到用户ID</string>
    <string name="a20013">请输入验证码</string>
    <string name="a20014">手机号不正确</string>
    <string name="a20015">该手机号已经绑定</string>
    <string name="a20016">验证码发送失败</string>
    <string name="a20017">验证码60秒内只能发送一次</string>
    <string name="a20018">验证码超出每天发送最大次数</string>
    <string name="a20019">无效的验证码, 请重试</string>
    <string name="a20020">验证码不正确</string>
    <string name="a20021">请输入密码</string>
    <string name="a20022">手机号已经被注册</string>
    <string name="a20023">没有获取到token</string>
    <string name="a20024">不是有效的token</string>
    <string name="a20025">用户可能已经被删除</string>
    <string name="a20026">用户已经被禁用</string>
    <string name="a20027">未绑定手机号</string>
    <string name="a20028">JSON解码失败</string>
    <string name="a20029">密码不符合要求, 请重新输入</string>
    <string name="a20030">修改密码失败</string>
    <string name="a20031">用户不存在</string>
    <string name="a20032">找回密码失败</string>
    <string name="a20033">该用户已经绑定过了推荐码</string>
    <string name="a20034">无法查询到该用户和推荐者的设备号</string>
    <string name="a20035">无法查询到推荐者的设备号</string>
    <string name="a20036">无法查询到当前用户的设备号</string>
    <string name="a20037">推荐者可能不存在</string>
    <string name="a20038">该用户设备号已经绑定过</string>
    <string name="a20039">请输入推荐码</string>
    <string name="a20040">不能绑定自己的推荐码</string>
    <string name="a20041">添加配置项出错</string>
    <string name="a20042">添加会员有效期错误</string>
    <string name="a20043">还没有创建会员卡</string>
    <string name="a20044">签到失败</string>
    <string name="a20045">更新用户表推荐人的推广码字段失败</string>
    <string name="a20046">联系方式不能为空</string>
    <string name="a20047">反馈内容不能为空</string>
    <string name="a20048">未获取到套餐列表</string>
    <string name="a20049">未获取到网站导航数据</string>
    <string name="a20050">获取问答列表失败</string>
    <string name="a20051">你还没有设置想要获取的数据语言</string>
    <string name="a20052">服务类型不存在</string>
    <string name="a20053">无法获取用户可连接的数值(检查redis缓存是否更新)</string>
    <string name="a20054">连接数超过上限</string>
    <string name="a20055">您的钻石不够, 请充值后使用</string>
    <string name="a20056">添加用户设备到使用记录失败</string>
    <string name="a20057">获取服务器失败</string>
    <string name="a20058">扣减用户钻石失败</string>
    <string name="a20059">未能根据您的设备号查找到相关数据</string>
    <string name="a20060">您还没有连接</string>
    <string name="a20061">路由表数据为空</string>
    <string name="a20062">服务器错误</string>
    <string name="loading_captcha">正在获取中...</string>
    <string name="type">套餐类型：%s</string>
    <string name="Purchase_time">购买时间：%s</string>
    <string name="Amount"><![CDATA[支付金额：<font color=\'#ff0000\'>%s</font>]]></string>
    <string name="not_enough">余额不足</string>
    <string name="Sun">日</string>
    <string name="Mon">一</string>
    <string name="Tue">二</string>
    <string name="Wed">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>

    <!-- <string name="toast_btn">没有足够的钻石或者服务到期</string>-->


</resources>
