<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/list_view_item_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_service_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/huihi"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/jy_bg"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_price"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="37dp"
                android:background="@mipmap/jy_price"
                android:gravity="center"
                android:text="@string/a31"
                android:textColor="#ffffff"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:text="@string/a32"
                android:textColor="#ffffff"
                android:textSize="26sp" />


            <Button
                android:textAllCaps="false"
                android:id="@+id/bt_item_service"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:background="@mipmap/jy_btn"
                android:text="@string/a33"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="9dp"
                android:text="@string/a34"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_service_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="18dp"
            android:text="@string/a35"
            android:textColor="#333333"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="14dp"
            android:text="@string/a36"
            android:textColor="#333333"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
