<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_register"
    android:background="#14AFDA"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_state"
        android:background="@drawable/shape_topbar"
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <com.wwws.wwwsvpn.myapplication.view.TopBar
        android:id="@+id/tb_register"
        app:titleText="@string/a5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </com.wwws.wwwsvpn.myapplication.view.TopBar>
    <LinearLayout
        android:orientation="vertical"
        android:background="#f5f5f5"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="#EBEBEB"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:background="#ffffff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:gravity="center_vertical"
                android:textColor="#333333"
                android:textSize="15sp"
                android:text="@string/a6"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp" />
            <EditText
                android:id="@+id/ed_setphonenum"
                android:textColorHint="#999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#999999"
                android:hint="@string/a7"
                android:maxLength="16"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
        <ImageView
            android:background="#EBEBEB"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:background="#ffffff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="#333333"
                android:textSize="15sp"
                android:text="@string/a8"
                android:layout_width="120dp"
                android:layout_height="match_parent" />
            <EditText
                android:id="@+id/et_verifycode"
                android:textColorHint="#999999"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp"
                android:textColor="#999999"
                android:hint="@string/a9"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Button
                android:textAllCaps="false"
                android:id="@+id/btn_vericode"
                android:background="@drawable/textview_border"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:textColor="#999999"
                android:textSize="14sp"
                android:text="@string/a10"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </LinearLayout>

        <ImageView
            android:background="#EBEBEB"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:background="#ffffff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:gravity="center_vertical"
                android:textColor="#333333"
                android:textSize="15sp"
                android:text="@string/a11"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp" />
            <EditText
                android:inputType="textPassword"
                android:id="@+id/ed_setpwd"
                android:textColorHint="#999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#999999"
                android:hint="@string/a12"
                android:maxLength="16"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
        <ImageView
            android:background="#EBEBEB"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:background="#ffffff"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:textColor="#333333"
                android:textSize="15sp"
                android:text="@string/a13"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp" />
            <EditText
                android:inputType="textPassword"
                android:id="@+id/et_pwd_again"
                android:textColorHint="#999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"
                android:textSize="14sp"
                android:textColor="#999999"
                android:layout_marginLeft="10dp"
                android:hint="@string/a14"
                android:maxLength="16"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:background="#EBEBEB"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:layout_weight="0"
            android:gravity="center"
            android:textColor="#999999"
            android:textSize="15sp"
            android:text="@string/a15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/bt_register"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="@string/a16"
            android:background="@mipmap/btn_updata"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
    </LinearLayout>
</LinearLayout>
